--- a/WineShop/Views/Manufacturer/Index.cshtml
+++ b/WineShop/Views/Manufacturer/Index.cshtml
@@ -3,37 +3,55 @@
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary">Manufacturer list.</h2>
+            <h2 class="text-primary">Manufacturer List</h2>
         </div>
-        <div class="col-6">
-            Add new Manufacturer to list.
+        <div class="col-6" style="text-align:right;">
+            <a asp-controller="Manufacturer" asp-action="Create" class="btn btn-primary">
+                Add New Manufacturer
+            </a>
         </div>
     </div>
 
     <br /><br />
 
-    @if (Model.Count() > 1)
-        {
-          <table class="table table-bordered table-striped" style="width:100%">
-              <thead>
-                  <tr>
-                      <th>Catergory Name</th>
-                      <th>Display Order</th>
-                  </tr>
-              </thead>
-              <tbody>
-                  @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td width=30%>@item.ID_Manufacturer</td>
-                            <td width=50%>@item.Name</td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        }
-        else
-        {
-            <p>No Manufacturer exist.</p>
-        }
-    </div>
+    @if (Model.Count() > 0)
+    {
+        <table class="table table-bordered table-striped" style="width:100%">
+            <thead>
+                <tr>
+                    <th>
+                        ID
+                    </th>
+                    <th>
+                        Manufacturer Name
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach(var obj in Model)
+                {
+                <tr>
+                    <td width="8%">@obj.ID_Manufacturer</td>
+                    <td width="75%">@obj.Name</td>
+                    <td class="text-center">
+                        <div class="btn-group" role="group">
+                            <a asp-controller="Manufacturer" asp-route-Id="@obj.ID_Manufacturer" asp-action="Edit" class="btn btn-primary mx-1">
+                                <i class="fas fa-edit">Edit</i>  
+                            </a>
+                            <a asp-controller="Manufacturer" asp-route-Id="@obj.ID_Manufacturer" asp-action="Delete" class="btn btn-danger mx-1">
+                                <i class="far fa-trash-alt">Delete</i> 
+                            </a>
+                        </div>
+                    </td>
+                </tr>
+                }
+            </tbody>
+        </table>
+    }
+    else
+    {
+        <p> No Manufacturer exists.</p>
+    }
+
+</div>
