--- a/WineShop/Views/Manufacturer/Create.cshtml
+++ b/WineShop/Views/Manufacturer/Create.cshtml
@@ -15,11 +15,9 @@
                         <input asp-for="Name" class="form-control" />
                         <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
-
                 </div>
                 <div class="form-group row mt-3">
                     <div class="col-8 offset-4 row">
-
                         <div class="col">
                             <input type="submit" class="btn btn-info w-100" value="Add"/>
                         </div>
@@ -31,11 +29,10 @@
             </div>
         </div>
     </div>
-
 </form>
 
-@section Scripts{ 
-
-    @{ <partial name="_ValidationScriptsPartial" /> }
-
+@section Scripts{
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
 }
