--- a/WineShop/Views/Shared/_Layout.cshtml
+++ b/WineShop/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Manufacturer" asp-action="Index">Manufacturer</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ProductType" asp-action="Index">Product Type</a>
+                        </li>
                     </ul>
                 </div>
             </div>
