--- a/WineShop/Views/Shared/_Layout.cshtml
+++ b/WineShop/Views/Shared/_Layout.cshtml
@@ -26,6 +26,11 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Manufacturer" asp-action="Index">Manufacturer</a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Shipment" asp-action="Index">Shipment</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
