PaymentMethod CRUD implemented

--- a/WineShop/Views/Shared/_Layout.cshtml
+++ b/WineShop/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Shipment" asp-action="Index">Shipment</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PaymentMethod" asp-action="Index">Payment Method</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -41,7 +44,6 @@
             @RenderBody()
         </main>
     </div>
-
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2021 - WineShop - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
