--- a/WineShop/Views/Shared/_Layout.cshtml
+++ b/WineShop/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             <a class="nav-link" asp-area="" asp-controller="OrderStatus" asp-action="Index">Order Status</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="PaymentMethod" asp-action="Index">Payment Method</a>
+                            <a class="nav-link" asp-area="" asp-controller="PaymentMethod" asp-action="Index">Payment Method</a>
                         </li>
                     </ul>
                 </div>
