CRUD for Product

--- a/WineShop/Views/ProductType/Delete.cshtml
+++ b/WineShop/Views/ProductType/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WineShop.Models.ProductType
 
 <form method="post" asp-action="DeletePost">
-    <input hidden type="number" value=@Model.ID_ProductType name="id" />
+    <input hidden type="number" value=@Model.Id name="id" />
     <div class="border p-3">
         <div class="form-group row">
             <h2 class="text-info pl-3 mb-5">Delete ProductType</h2>
