--- a/WineShop/Views/ProductType/Edit.cshtml
+++ b/WineShop/Views/ProductType/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WineShop.Models.ProductType
 
 <form method="post">
-    <input asp-for="ID_ProductType" hidden />
+    <input asp-for="Id" hidden />
     <div class="border p-3">
         <div class="form-group row">
             <h2 class="text-info pl-3 mb-5">Edit ProductType</h2>
