--- a/WineShop/Views/Manufacturer/Delete.cshtml
+++ b/WineShop/Views/Manufacturer/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WineShop.Models.Manufacturer
 
 <form method="post" asp-action="DeletePost">
-    <input hidden type="number" value=@Model.ID_Manufacturer name="id" />
+    <input hidden type="number" value=@Model.Id name="id" />
     <div class="border p-3">
         <div class="form-group row">
             <h2 class="text-info pl-3 mb-5">Delete Manufacturer</h2>
