--- a/WineShop/Views/ProductType/Index.cshtml
+++ b/WineShop/Views/ProductType/Index.cshtml
@@ -32,14 +32,14 @@
                 @foreach(var ProductType in Model)
                 {
                 <tr>
-                    <td width="8%">@ProductType.ID_ProductType</td>
+                    <td width="8%">@ProductType.Id</td>
                     <td width="75%">@ProductType.Name</td>
                     <td class="text-center">
                         <div class="btn-group" role="group">
-                            <a asp-controller="ProductType" asp-route-Id="@ProductType.ID_ProductType" asp-action="Edit" class="btn btn-primary mx-1">
+                            <a asp-controller="ProductType" asp-route-Id="@ProductType.Id" asp-action="Edit" class="btn btn-primary mx-1">
                                 <i class="fas fa-edit">Edit</i>  
                             </a>
-                            <a asp-controller="ProductType" asp-route-Id="@ProductType.ID_ProductType" asp-action="Delete" class="btn btn-danger mx-1">
+                            <a asp-controller="ProductType" asp-route-Id="@ProductType.Id" asp-action="Delete" class="btn btn-danger mx-1">
                                 <i class="far fa-trash-alt">Delete</i> 
                             </a>
                         </div>
