--- a/WineShop/Areas/Identity/Pages/Account/Register.cshtml
+++ b/WineShop/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,6 +1,11 @@
 ﻿@page
 @model RegisterModel
-@{
+@if (User.IsInRole(WineShop.WC.AdminRole))
+{
+    ViewData["Title"] = "Register Admin";
+}
+else
+{
     ViewData["Title"] = "Register";
 }
 
@@ -47,7 +52,7 @@
                 <label asp-for="Input.PhoneNumber"></label>
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">@ViewData["Title"]</button>
         </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
