--- a/WineShop/Views/ProductType/Index.cshtml
+++ b/WineShop/Views/ProductType/Index.cshtml
@@ -5,11 +5,12 @@
         <div class="col-6">
             <h2 class="text-primary">ProductType List</h2>
         </div>
-        <div class="col-6" style="text-align:right;">
-            <a asp-controller="ProductType" asp-action="Create" class="btn btn-primary">
-                Add New ProductType
-            </a>
-        </div>
+        @if (User.IsInRole(WC.AdminRole))
+        {
+            <div class="col-6" style="text-align:right;">
+                <a asp-controller="ProductType" asp-action="Create" class="btn btn-primary">Add New ProductType</a>
+            </div>
+        }
     </div>
 
     <br /><br />
@@ -25,26 +26,29 @@
                     <th>
                         ProductType Name
                     </th>
-                    <th></th>
+                    @if (User.IsInRole(WC.AdminRole)) { <th></th> }
                 </tr>
             </thead>
             <tbody>
                 @foreach(var ProductType in Model)
                 {
-                <tr>
-                    <td width="8%">@ProductType.Id</td>
-                    <td width="75%">@ProductType.Name</td>
-                    <td class="text-center">
-                        <div class="btn-group" role="group">
-                            <a asp-controller="ProductType" asp-route-Id="@ProductType.Id" asp-action="Edit" class="btn btn-primary mx-1">
-                                <i class="fas fa-edit">Edit</i>  
-                            </a>
-                            <a asp-controller="ProductType" asp-route-Id="@ProductType.Id" asp-action="Delete" class="btn btn-danger mx-1">
-                                <i class="far fa-trash-alt">Delete</i> 
-                            </a>
-                        </div>
-                    </td>
-                </tr>
+                    <tr>
+                        <td width="8%">@ProductType.Id</td>
+                        <td width="75%">@ProductType.Name</td>
+                        @if (User.IsInRole(WC.AdminRole))
+                        {
+                            <td class="text-center">
+                                <div class="btn-group" role="group">
+                                    <a asp-controller="ProductType" asp-route-Id="@ProductType.Id" asp-action="Edit" class="btn btn-primary mx-1">
+                                        <i class="fas fa-edit">Edit</i>  
+                                    </a>
+                                    <a asp-controller="ProductType" asp-route-Id="@ProductType.Id" asp-action="Delete" class="btn btn-danger mx-1">
+                                        <i class="far fa-trash-alt">Delete</i> 
+                                    </a>
+                                </div>
+                            </td>
+                        }
+                    </tr>
                 }
             </tbody>
         </table>
