--- a/WineShop/Views/Shared/_IndividualProductCard.cshtml
+++ b/WineShop/Views/Shared/_IndividualProductCard.cshtml
@@ -1,11 +1,13 @@
 ﻿@model WineShop.Models.Product
-
-    <div class="text-dark col-lg-4 col-md-6 pb-4 filter @Model.ProductType.Name.Replace(' ','_')">
-        <!-- Card-->
+@{
+    ViewData["ProductType"] = Model.ProductType.Name.Replace(' ','_');
+    ViewData["ProductName"] = Model.Name.Replace(' ', '_').ToLower();
+}
+    <div class="text-dark col-lg-4 col-md-6 pb-4 filter @ViewData["ProductType"] @ViewData["ProductName"]">
         <div class="card bg-white rounded shadow-sm" style="border:1px solid #222">
             <div class="card-body px-3 pt-3 pb-1 row">
-                <div class="col-7"><label class="float-left">@Model.Name</label></div>
-                <div class="col-5"><label class="float-right"><span class="text-info h5">@string.Format("{0:c0}",Model.Price)</span> / sqft</label> </div>
+                <div class="col-7"><label style="float:left">@Model.Name</label></div>
+                <div class="col-5"><label style="float:right"><span class="text-info h5">@string.Format("{0:c2}",Model.Price)</span></label> </div>
             </div>
             <img class="card-img-top img-fluid d-block mx-auto mb-3" src="@WC.ImageProductPath@Model.Image" alt="Card image cap">
             <div class="card-body p-1 px-3 row">
