Cart Summary Implemented

--- a/WineShop/Views/Home/Index.cshtml
+++ b/WineShop/Views/Home/Index.cshtml
@@ -115,14 +115,14 @@
         </div>
     </div>
     <!-- Image of location/map -->
-    <img src="..." class="row col-12 vh-100">
+    <div class="row col-12 vh-100" id="map"></div>
     <!-- Footer -->
-    <footer class="row col-12 vh-40">
-      <i class="hover-opacity col-2">facebook</i>
-      <i class="hover-opacity col-2">instagram</i>
-      <i class="hover-opacity col-2">snapchat</i>
-      <i class="hover-opacity col-2">pinterest</i>
-      <i class="hover-opacity col-2">twitter</i>
-      <i class="hover-opacity col-2">linkedin</i>
+    <footer class="row col-12 vh-40" style="padding-top:20px;">
+      <h1 class="hover-opacity col-2"><a href="https://www.google.pl"><i class="fa-brands fa-facebook"></i></a></h1>
+      <h1 class="hover-opacity col-2"><a href="https://www.google.pl"><i class="fa-brands fa-instagram"></i></a></h1>
+      <h1 class="hover-opacity col-2"><a href="https://www.google.pl"><i class="fa-brands fa-snapchat"></i></a></h1>
+      <h1 class="hover-opacity col-2"><a href="https://www.google.pl"><i class="fa-brands fa-pinterest"></i></a></h1>
+      <h1 class="hover-opacity col-2"><a href="https://www.google.pl"><i class="fa-brands fa-twitter"></i></a></h1>
+      <h1 class="hover-opacity col-2"><a href="https://www.google.pl"><i class="fa-brands fa-linkedin"></i></a></h1>
     </footer>
 </div>
