--- a/WineShop/Views/Shared/_IndividualProductCard.cshtml
+++ b/WineShop/Views/Shared/_IndividualProductCard.cshtml
@@ -2,7 +2,29 @@
 @{
     ViewData["ProductType"] = Model.ProductType.Name.Replace(' ','_');
     ViewData["ProductName"] = Model.Name.Replace(' ', '_').ToLower();
+
+    var shortDescription = "";
+    if (Model.Description.Length < 200)
+    {
+        shortDescription = @Model.Description.Substring(0, Model.Description.Count()).Trim();
+    }
+    else
+    {
+        shortDescription = @Model.Description.Substring(0, 200).Trim() +" (...)";
+    }
+
+    var averageRating = default(double);
+    var numberOfComments = Model.Rating.Count();
+    if (numberOfComments > 0)
+    {
+        foreach (var bookRating in Model.Rating)
+        {
+            averageRating += bookRating.RatingValue;
+        }
+        averageRating = averageRating / numberOfComments;
+    }
 }
+
     <div class="text-dark col-lg-4 col-md-6 pb-4 filter @ViewData["ProductType"] @ViewData["ProductName"]">
         <div class="card bg-white rounded shadow-sm" style="border:1px solid #222">
             <div class="card-body px-3 pt-3 pb-1 row">
@@ -12,13 +34,28 @@
             <img class="card-img-top img-fluid d-block mx-auto mb-3" src="@WC.ImageProductPath@Model.Image" alt="Card image cap">
             <div class="card-body p-1 px-3 row">
                 <div class="col-6">
-                    <span class="text-dark badge p-2 border w-100" style="background-color:lavenderblush">@Model.ProductType.Name</span>
+                    <span class="text-dark badge p-2 border w-100" style="font-size:90%;background-color:lavenderblush">@Model.ProductType.Name</span>
                 </div>
                 <div class="col-6 border-0">
-                    <span class="text-dark badge p-2 border w-100" style="background-color:aliceblue">@Model.Manufacturer.Name</span>
+                    <span class="text-dark badge p-2 border w-100" style="font-size:90%;background-color:aliceblue">@Model.Manufacturer.Name</span>
                 </div>
-                <div class="col-12 pt-2" style="font-size:13px; text-align:justify">
-                    <p> @Model.Description</p>
+                <div class="col-12 pt-2" style="text-align:justify">
+                    @if (averageRating == 0)
+                    {
+                        <span class="text-dark badge p-2 border w-100" style="background-color:aliceblue;padding-top:20px;">
+                            No Ratings
+                        </span>
+                    }
+                    else
+                    {
+                        <span class="text-dark badge p-2 border w-100" style="background-color:aliceblue;padding-top:20px;">
+                            @averageRating/5 (@numberOfComments Rates)
+                        </span>
+                    }
+                </div>
+                <div class="col-12 pt-2 pb-2" style="font-size:85%; text-align:justify">
+                    <b>Description</b><br/>
+                    @shortDescription
                 </div>
                 <div class="col-12 p-1">
                     <a asp-action="Details" asp-route-id="@Model.Id" class="btn btn-dark form-control btn-sm p-2" style="height:40px">View Details</a>
